--- a/styles/style.css
+++ b/styles/style.css
@@ -416,29 +416,46 @@ body{
       -webkit-appearance: none;
       margin: 0;
   }
-/*  Footer Styles  */
 
+
+  .space_line{
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    color: #999999;
+    font-size: 16px;
+    line-height: 40px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+/*  Footer Styles  */
 #footer{
-    background: #e0e0e0;
+    background: #111;
     padding: 20px 0;
 }
+
 #footer a{
-    color: #999999;
-    padding: 0;
     text-decoration: none;
 }
+
 #footer a:hover{
-    color: #666666;
+    color: red;
 }
+
 #footer ul{
     list-style: none;
     padding-left: 0px;
 }
+
+#footer ul a{
+    color:#999999;
+    padding: 10px 0;
+    text-decoration: none;
+}
+
 #footer .social{
     text-align: left;
 }
+
 #footer .social a{
-    margin: 0px 10px 0px 0px;
+    margin:0px 10px 0px 0px;
     display: inline-block;
     color: #ffffff;
     width: 30px;
@@ -451,15 +468,73 @@ body{
     background: #555555;
     text-decoration: none;
 }
+
 #footer .social a:hover{
     color: #dedede;
     background: #777777;
 }
 
+#footer h4{
+    font-family: 'Roboto', sans-serif;
+    color:white;
+    padding-top:20px;
+    text-transform: uppercase;
+    font-size: 16px;
+}
+
+#footer img{
+    margin: -5px 0px 15px 0px;
+}
+
+#footer .addressp{
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    color: #999999;
+    font-size: 15px;
+}
+
+#footer .headline::before{
+    content: '|';
+    color: #c65039;
+    padding-right: 10px;
+}
+
+.subc{
+    background: #c65039;
+    color: #ffffff;
+}
+
+.subc:hover{
+    color: #ffffff;
+    background:#e62a04;
+}
+
+.space_line{
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    color: #999999;
+    font-size: 16px;
+    line-height: 40px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.space_line2{
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    color: #999999;
+    font-size: 16px;
+    line-height: 40px;
+}
+
+.footer-bottom-text{
+    text-align: center;
+    background: #000;
+    line-height: 55px;
+    color: #999;
+    font-size: 13px;
+}
+
 /*  Copyright Styles  */
 
 #copyright{
-    background: #333333;
+    background: #000;
     color: #cccccc;
     padding: 20px 0px;
     font-size: 12px;
@@ -586,4 +661,28 @@ body{
     border-color: #000 #000 transparent transparent;
 }
 
+.setw {
+    
+    display: block;
+    width: 120px;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+.mar_bot{
+    margin-top: 25px;
+    
+}
 /* styling the label finish */
