--- a/customer/styles/style.css
+++ b/customer/styles/style.css
@@ -1,4 +1,6 @@
-/*
+
+                                
+                                /*
 Template Name     : M-Dev Store
 Author Name       : MrGhie
 Author Email      : mugianto1nd@gmail.com
@@ -165,6 +167,9 @@ body{
 }
 
 /* Latest Products Styles */
+.eff:hover{
+    transform: translateY(-15px);
+}
 
 #hot h2{
     font-size: 36px;
@@ -184,6 +189,18 @@ body{
         width: 60%;
         margin: 0 auto;
     }
+}
+.pad_h{
+    word-wrap: break-word;
+    white-space: nowrap; 
+    padding-bottom: 5px;
+   
+   
+    
+    overflow: hidden;
+    text-overflow: ellipsis;
+  
+    text-align: center;
 }
 #content .product{
     background: #ffffff;
@@ -346,30 +363,99 @@ body{
     }
 }
 
+/* Number Button Styles(Detail.php)*/
+.value-button {
+    display: inline-block;
+    border: 1px solid #ddd;
+    margin-top: -2px;
+    width: 40px;
+    height: 30px;
+    text-align:center;
+    vertical-align: middle;
+    padding: 3px 0;
+    background: #eee;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  .value-button:hover {
+    cursor: pointer;
+  }
+  
+  form #decrease {
+    margin-right: -4px;
+    border-radius: 8px 0 0 8px;
+  }
+  
+  form #increase {
+    margin-left: -4px;
+    border-radius: 0 8px 8px 0;
+  }
+  
+  form #input-wrap {
+    margin: 0px;
+    padding: 0px;
+  }
+  
+  input#number {
+    text-align: center;
+    border: none;
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    margin: 0px;
+    width: 40px;
+    height: 30px;
+  }
+  
+  input[type=number]::-webkit-inner-spin-button,
+  input[type=number]::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+  }
 
+
+  .space_line{
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    color: #999999;
+    font-size: 16px;
+    line-height: 40px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
 /*  Footer Styles  */
-
 #footer{
-    background: #e0e0e0;
+    background: #111;
     padding: 20px 0;
 }
+
 #footer a{
-    color: #999999;
-    padding: 0;
     text-decoration: none;
 }
+
 #footer a:hover{
-    color: #666666;
+    color: red;
 }
+
 #footer ul{
     list-style: none;
     padding-left: 0px;
 }
+
+#footer ul a{
+    color:#999999;
+    padding: 10px 0;
+    text-decoration: none;
+}
+
 #footer .social{
     text-align: left;
 }
+
 #footer .social a{
-    margin: 0px 10px 0px 0px;
+    margin:0px 10px 0px 0px;
     display: inline-block;
     color: #ffffff;
     width: 30px;
@@ -382,15 +468,73 @@ body{
     background: #555555;
     text-decoration: none;
 }
+
 #footer .social a:hover{
     color: #dedede;
     background: #777777;
 }
 
+#footer h4{
+    font-family: 'Roboto', sans-serif;
+    color:white;
+    padding-top:20px;
+    text-transform: uppercase;
+    font-size: 16px;
+}
+
+#footer img{
+    margin: -5px 0px 15px 0px;
+}
+
+#footer .addressp{
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    color: #999999;
+    font-size: 15px;
+}
+
+#footer .headline::before{
+    content: '|';
+    color: #c65039;
+    padding-right: 10px;
+}
+
+.subc{
+    background: #c65039;
+    color: #ffffff;
+}
+
+.subc:hover{
+    color: #ffffff;
+    background:#e62a04;
+}
+
+.space_line{
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    color: #999999;
+    font-size: 16px;
+    line-height: 40px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.space_line2{
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    color: #999999;
+    font-size: 16px;
+    line-height: 40px;
+}
+
+.footer-bottom-text{
+    text-align: center;
+    background: #000;
+    line-height: 55px;
+    color: #999;
+    font-size: 13px;
+}
+
 /*  Copyright Styles  */
 
 #copyright{
-    background: #333333;
+    background: #000;
     color: #cccccc;
     padding: 20px 0px;
     font-size: 12px;
@@ -398,3 +542,147 @@ body{
 #copyright p{
     margin: 0px;
 }
+                            
+.nav.category-menu{
+    margin-top: -26px;
+}    
+.scroll-menu{
+    height: 260px;
+    overflow-y: scroll;
+}   
+.checkbox span{
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    padding-left: 5px;
+} 
+.checkbox span::before{
+    content: "";
+    display: inline-block;
+    position: absolute;
+    width: 17px;
+    height: 17px;
+    left: 0;
+    margin-left: -20px;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    transition: border 0.2s ease-in-out, color 0.2s ease-in-out;
+    background: #fff;
+}          
+.checkbox span::after{
+    content: "";
+    display: inline-block;
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    left: 0;
+    top: 0;
+    margin-left: -20px;
+    padding-left: 3px;
+    padding-top: 1px;
+    font-size: 11px;
+    color: #555;
+}  
+.checkbox input[type='checkbox']{
+    opacity: 0;
+    z-index: 1;
+    cursor: pointer;
+}
+.checkbox input[type='checkbox']:focus + span::before{
+    outline: thin dotted ;
+    outline: 5px auto;
+    outline-offset: -2px;
+}
+.checkbox input[type='checkbox']:checked + span::after{
+    font-family: "FontAwesome";
+    content: "\f00c";
+}
+.checkbox-primary input[type='checkbox']:checked + span::before{
+    background-color: #337ab7;
+    border-color: #337ab7;
+}
+.checkbox-primary input[type='checkbox']:checked + span::after{
+    color: #fff;
+}
+.product a img.img-responsive{
+    max-height: 252px;
+    width: 100%;
+}
+
+/* styling the label begin */
+
+.label{
+    color: #000;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 700;
+    position: absolute;
+    top: 10px;
+    padding-left: 51px;
+    z-index: 20;
+}
+
+.label .labelBackground{
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.label .theLabel{
+    position: relative;
+    width: 100px;
+    padding: 6px 50px 6px 15px;
+    margin: 10px 50px 10px -71px;
+    color: #fff;
+    text-shadow: 3px 3px 3px grey;
+}
+
+.label.sale .theLabel{
+    background: rgb(255, 0, 64);
+}
+
+.label.new .theLabel{
+    background: #4fbfa8;
+}
+
+.label .theLabel:before,
+.label .theLabel:after{
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+}
+
+.label .theLabel:after{
+    left: 0;
+    top: 100%;
+    border-width: 5px 10px;
+    border-style: solid;
+    border-color: #000 #000 transparent transparent;
+}
+
+.setw {
+    
+    display: block;
+    width: 120px;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+.mar_bot{
+    margin-top: 25px;
+    
+}
+/* styling the label finish */
